Update command data for Toyota/Tundra

--- a/tests/test_cases/2015/commands/7B0.7B8.2105.yaml
+++ b/tests/test_cases/2015/commands/7B0.7B8.2105.yaml
@@ -2,68 +2,68 @@ command_id: 7B0.7B8.2105
 test_cases:
 - expected_values:
     TOYOTA_DECEL: 0.35647
-    TOYOTA_DECEL2: 0.07129
+    TOYOTA_DECEL_2: 0.07129
   response: |-
     2105
     7B810086105828002CB
     7B821FCC30000000000
 - expected_values:
     TOYOTA_DECEL: -1.06941
-    TOYOTA_DECEL2: -0.07129
+    TOYOTA_DECEL_2: -0.07129
   response: |-
     7B810086105787F03EC
     7B821F77E0000000000
 - expected_values:
     TOYOTA_DECEL: -0.21388
-    TOYOTA_DECEL2: -1.92494
+    TOYOTA_DECEL_2: -1.92494
   response: |-
     7B8100861057E720299
     7B821FDD40000000000
 - expected_values:
     TOYOTA_DECEL: 0.07129
-    TOYOTA_DECEL2: -0.07129
+    TOYOTA_DECEL_2: -0.07129
   response: |-
     7B810086105807F05CA
     7B8210FC30000000000
 - expected_values:
     TOYOTA_DECEL: 0.07129
-    TOYOTA_DECEL2: 0.07129
+    TOYOTA_DECEL_2: 0.07129
   response: |-
     7B81008610580800615
     7B82110430000000000
 - expected_values:
     TOYOTA_DECEL: 0.07129
-    TOYOTA_DECEL2: 0.78424
+    TOYOTA_DECEL_2: 0.78424
   response: |-
     7B81008610580850590
     7B8210A800000000000
 - expected_values:
     TOYOTA_DECEL: 0.07129
-    TOYOTA_DECEL2: 0.92682
+    TOYOTA_DECEL_2: 0.92682
   response: |-
     7B8100861058086057B
     7B8210B750000000000
 - expected_values:
     TOYOTA_DECEL: 0.21388
-    TOYOTA_DECEL2: 0.07129
+    TOYOTA_DECEL_2: 0.07129
   response: |-
     7B81008610581800860
     7B82120110000000000
 - expected_values:
     TOYOTA_DECEL: 0.49906
-    TOYOTA_DECEL2: 0.35647
+    TOYOTA_DECEL_2: 0.35647
   response: |-
     7B810086105838205FC
     7B82122680000000000
 - expected_values:
     TOYOTA_DECEL: 1.212
-    TOYOTA_DECEL2: 0.07129
+    TOYOTA_DECEL_2: 0.07129
   response: |-
     7B81008610588800D38
     7B82122550000000000
 - expected_values:
     TOYOTA_DECEL: 1.49718
-    TOYOTA_DECEL2: 0.21388
+    TOYOTA_DECEL_2: 0.21388
   response: |-
     7B8100861058A810767
     7B8210F580000000000
