--- a/tests/test_cases/2015/commands/7C4.7CC.2122.yaml
+++ b/tests/test_cases/2015/commands/7C4.7CC.2122.yaml
@@ -1,31 +1,31 @@
 command_id: 7C4.7CC.2122
 test_cases:
 - expected_values:
-    TOYOTA_AAT: 7.15
+    TOYOTA_AAT_7C4: 7.15
   response: |-
     2122
     7CC03612257
 - expected_values:
-    TOYOTA_AAT: 1.55
+    TOYOTA_AAT_7C4: 1.55
   response: 7CC03612247
 - expected_values:
-    TOYOTA_AAT: 1.9
+    TOYOTA_AAT_7C4: 1.9
   response: 7CC03612248
 - expected_values:
-    TOYOTA_AAT: 2.25
+    TOYOTA_AAT_7C4: 2.25
   response: 7CC03612249
 - expected_values:
-    TOYOTA_AAT: 2.6
+    TOYOTA_AAT_7C4: 2.6
   response: 7CC0361224A
 - expected_values:
-    TOYOTA_AAT: 2.95
+    TOYOTA_AAT_7C4: 2.95
   response: 7CC0361224B
 - expected_values:
-    TOYOTA_AAT: 3.3
+    TOYOTA_AAT_7C4: 3.3
   response: 7CC0361224C
 - expected_values:
-    TOYOTA_AAT: 4.7
+    TOYOTA_AAT_7C4: 4.7
   response: 7CC03612250
 - expected_values:
-    TOYOTA_AAT: 5.05
+    TOYOTA_AAT_7C4: 5.05
   response: 7CC03612251
