--- a/tests/test_cases/2015/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2015/commands/7E0.7E8.2101.yaml
@@ -1,12 +1,12 @@
 command_id: 7E0.7E8.2101
 test_cases:
 - expected_values:
+    TOYOTA_AAT: 86
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 16.47059
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 5.88235
-    TOYOTA_AMBIENT_T_V2: 86
     TOYOTA_ATMOSPHERE_PRESSURE: 11
     TOYOTA_CALCULATED_LOAD_7E0: 25.09804
-    TOYOTA_COOLANT_TEMP: 34
+    TOYOTA_COOLANT_TEMP: -6
     TOYOTA_ENGINE_RUN_TIME: 42
     TOYOTA_ENGINE_SPEED: 3
     TOYOTA_INTAKE_AIR: 41
@@ -28,12 +28,12 @@ test_cases:
     7E8232A0F03B003B333
     7E824CD000000000000
 - expected_values:
+    TOYOTA_AAT: 86
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 19.21569
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
-    TOYOTA_AMBIENT_T_V2: 86
     TOYOTA_ATMOSPHERE_PRESSURE: 0
     TOYOTA_CALCULATED_LOAD_7E0: 0
-    TOYOTA_COOLANT_TEMP: 0
+    TOYOTA_COOLANT_TEMP: -40
     TOYOTA_ENGINE_RUN_TIME: 305
     TOYOTA_ENGINE_SPEED: 0
     TOYOTA_INTAKE_AIR: 42
@@ -54,12 +54,12 @@ test_cases:
     7E823311003C703F232
     7E82447000000000000
 - expected_values:
+    TOYOTA_AAT: 89
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 16.47059
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
-    TOYOTA_AMBIENT_T_V2: 89
     TOYOTA_ATMOSPHERE_PRESSURE: 13
     TOYOTA_CALCULATED_LOAD_7E0: 21.56863
-    TOYOTA_COOLANT_TEMP: 65
+    TOYOTA_COOLANT_TEMP: 25
     TOYOTA_ENGINE_RUN_TIME: 42
     TOYOTA_ENGINE_SPEED: 10244
     TOYOTA_INTAKE_AIR: 42
@@ -80,12 +80,12 @@ test_cases:
     7E8232A1003C703F135
     7E82454000000000000
 - expected_values:
+    TOYOTA_AAT: 88
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 16.47059
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
-    TOYOTA_AMBIENT_T_V2: 88
     TOYOTA_ATMOSPHERE_PRESSURE: 12
     TOYOTA_CALCULATED_LOAD_7E0: 23.92157
-    TOYOTA_COOLANT_TEMP: 99
+    TOYOTA_COOLANT_TEMP: 59
     TOYOTA_ENGINE_RUN_TIME: 42
     TOYOTA_ENGINE_SPEED: 3588
     TOYOTA_INTAKE_AIR: 42
@@ -106,12 +106,12 @@ test_cases:
     7E8232A1003C703F134
     7E824B8000000000000
 - expected_values:
+    TOYOTA_AAT: 81
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 16.47059
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 9.80392
-    TOYOTA_AMBIENT_T_V2: 81
     TOYOTA_ATMOSPHERE_PRESSURE: 11
     TOYOTA_CALCULATED_LOAD_7E0: 24.70588
-    TOYOTA_COOLANT_TEMP: 12
+    TOYOTA_COOLANT_TEMP: -28
     TOYOTA_ENGINE_RUN_TIME: 42
     TOYOTA_ENGINE_SPEED: 8
     TOYOTA_INTAKE_AIR: 41
@@ -132,12 +132,12 @@ test_cases:
     7E8232A190848086134
     7E82456000000000000
 - expected_values:
+    TOYOTA_AAT: 81
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 16.47059
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 9.80392
-    TOYOTA_AMBIENT_T_V2: 81
     TOYOTA_ATMOSPHERE_PRESSURE: 10
     TOYOTA_CALCULATED_LOAD_7E0: 25.09804
-    TOYOTA_COOLANT_TEMP: 215
+    TOYOTA_COOLANT_TEMP: 206
     TOYOTA_ENGINE_RUN_TIME: 42
     TOYOTA_ENGINE_SPEED: 8
     TOYOTA_INTAKE_AIR: 41
@@ -158,12 +158,12 @@ test_cases:
     7E8232A190848086034
     7E82456000000000000
 - expected_values:
+    TOYOTA_AAT: 81
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 16.86275
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 9.80392
-    TOYOTA_AMBIENT_T_V2: 81
     TOYOTA_ATMOSPHERE_PRESSURE: 11
     TOYOTA_CALCULATED_LOAD_7E0: 26.66667
-    TOYOTA_COOLANT_TEMP: 74
+    TOYOTA_COOLANT_TEMP: 34
     TOYOTA_ENGINE_RUN_TIME: 43
     TOYOTA_ENGINE_SPEED: 8
     TOYOTA_INTAKE_AIR: 41
@@ -184,12 +184,12 @@ test_cases:
     7E8232B190848086034
     7E82456000000000000
 - expected_values:
+    TOYOTA_AAT: 89
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 19.60784
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
-    TOYOTA_AMBIENT_T_V2: 89
     TOYOTA_ATMOSPHERE_PRESSURE: 23
     TOYOTA_CALCULATED_LOAD_7E0: 29.01961
-    TOYOTA_COOLANT_TEMP: 121
+    TOYOTA_COOLANT_TEMP: 81
     TOYOTA_ENGINE_RUN_TIME: 1073
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 41
@@ -210,12 +210,12 @@ test_cases:
     7E823321003BE03EA35
     7E824A2000000000000
 - expected_values:
+    TOYOTA_AAT: 30
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 18.82353
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 5.88235
-    TOYOTA_AMBIENT_T_V2: 30
     TOYOTA_ATMOSPHERE_PRESSURE: 16
     TOYOTA_CALCULATED_LOAD_7E0: 29.80392
-    TOYOTA_COOLANT_TEMP: 100
+    TOYOTA_COOLANT_TEMP: 60
     TOYOTA_ENGINE_RUN_TIME: 48
     TOYOTA_ENGINE_SPEED: 6144
     TOYOTA_INTAKE_AIR: 41
@@ -236,12 +236,12 @@ test_cases:
     7E823300F03B003DE36
     7E8242B000000000000
 - expected_values:
+    TOYOTA_AAT: 88
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 18.43137
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
-    TOYOTA_AMBIENT_T_V2: 88
     TOYOTA_ATMOSPHERE_PRESSURE: 18
     TOYOTA_CALCULATED_LOAD_7E0: 30.98039
-    TOYOTA_COOLANT_TEMP: 215
+    TOYOTA_COOLANT_TEMP: 195
     TOYOTA_ENGINE_RUN_TIME: 815
     TOYOTA_ENGINE_SPEED: 9988
     TOYOTA_INTAKE_AIR: 42
@@ -262,12 +262,12 @@ test_cases:
     7E8232F1003C703F035
     7E82467000000000000
 - expected_values:
+    TOYOTA_AAT: 69
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 21.96078
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 5.88235
-    TOYOTA_AMBIENT_T_V2: 69
     TOYOTA_ATMOSPHERE_PRESSURE: 25
     TOYOTA_CALCULATED_LOAD_7E0: 40.39216
-    TOYOTA_COOLANT_TEMP: 3
+    TOYOTA_COOLANT_TEMP: -37
     TOYOTA_ENGINE_RUN_TIME: 1847
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 41
@@ -288,12 +288,12 @@ test_cases:
     7E823380F03B503E236
     7E82404000000000000
 - expected_values:
+    TOYOTA_AAT: 89
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 21.17647
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
-    TOYOTA_AMBIENT_T_V2: 89
     TOYOTA_ATMOSPHERE_PRESSURE: 22
     TOYOTA_CALCULATED_LOAD_7E0: 42.35294
-    TOYOTA_COOLANT_TEMP: 64
+    TOYOTA_COOLANT_TEMP: 24
     TOYOTA_ENGINE_RUN_TIME: 3126
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 41
@@ -314,12 +314,12 @@ test_cases:
     7E823361003C603EF35
     7E8248E000000000000
 - expected_values:
+    TOYOTA_AAT: 83
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 21.56863
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
-    TOYOTA_AMBIENT_T_V2: 83
     TOYOTA_ATMOSPHERE_PRESSURE: 19
     TOYOTA_CALCULATED_LOAD_7E0: 42.35294
-    TOYOTA_COOLANT_TEMP: 186
+    TOYOTA_COOLANT_TEMP: 146
     TOYOTA_ENGINE_RUN_TIME: 2615
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 41
@@ -340,12 +340,12 @@ test_cases:
     7E823371003B803E435
     7E824F0000000000000
 - expected_values:
+    TOYOTA_AAT: 82
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 21.17647
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
-    TOYOTA_AMBIENT_T_V2: 82
     TOYOTA_ATMOSPHERE_PRESSURE: 20
     TOYOTA_CALCULATED_LOAD_7E0: 45.09804
-    TOYOTA_COOLANT_TEMP: 123
+    TOYOTA_COOLANT_TEMP: 83
     TOYOTA_ENGINE_RUN_TIME: 2358
     TOYOTA_ENGINE_SPEED: 15618
     TOYOTA_INTAKE_AIR: 41
@@ -366,12 +366,12 @@ test_cases:
     7E823361003BA03E535
     7E824DD000000000000
 - expected_values:
+    TOYOTA_AAT: 83
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 21.17647
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
-    TOYOTA_AMBIENT_T_V2: 83
     TOYOTA_ATMOSPHERE_PRESSURE: 18
     TOYOTA_CALCULATED_LOAD_7E0: 45.4902
-    TOYOTA_COOLANT_TEMP: 215
+    TOYOTA_COOLANT_TEMP: 192
     TOYOTA_ENGINE_RUN_TIME: 2358
     TOYOTA_ENGINE_SPEED: 12034
     TOYOTA_INTAKE_AIR: 41
@@ -392,12 +392,12 @@ test_cases:
     7E823361003BB03E735
     7E824B6000000000000
 - expected_values:
+    TOYOTA_AAT: 89
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 22.35294
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
-    TOYOTA_AMBIENT_T_V2: 89
     TOYOTA_ATMOSPHERE_PRESSURE: 23
     TOYOTA_CALCULATED_LOAD_7E0: 48.23529
-    TOYOTA_COOLANT_TEMP: 215
+    TOYOTA_COOLANT_TEMP: 200
     TOYOTA_ENGINE_RUN_TIME: 3129
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 41
@@ -418,12 +418,12 @@ test_cases:
     7E823391003BF03EA35
     7E824A2000000000000
 - expected_values:
+    TOYOTA_AAT: 87
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 22.35294
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
-    TOYOTA_AMBIENT_T_V2: 87
     TOYOTA_ATMOSPHERE_PRESSURE: 23
     TOYOTA_CALCULATED_LOAD_7E0: 48.23529
-    TOYOTA_COOLANT_TEMP: 21
+    TOYOTA_COOLANT_TEMP: -19
     TOYOTA_ENGINE_RUN_TIME: 2873
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 41
@@ -444,12 +444,12 @@ test_cases:
     7E823391003BD03E935
     7E8248E000000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 24.70588
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 5.88235
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 24
     TOYOTA_CALCULATED_LOAD_7E0: 54.90196
-    TOYOTA_COOLANT_TEMP: 199
+    TOYOTA_COOLANT_TEMP: 159
     TOYOTA_ENGINE_RUN_TIME: 3903
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 41
@@ -470,12 +470,12 @@ test_cases:
     7E8233F0F03B303E136
     7E82417000000000000
 - expected_values:
+    TOYOTA_AAT: 53
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 27.45098
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 5.88235
-    TOYOTA_AMBIENT_T_V2: 53
     TOYOTA_ATMOSPHERE_PRESSURE: 32
     TOYOTA_CALCULATED_LOAD_7E0: 59.21569
-    TOYOTA_COOLANT_TEMP: 215
+    TOYOTA_COOLANT_TEMP: 199
     TOYOTA_ENGINE_RUN_TIME: 5702
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 41
@@ -496,12 +496,12 @@ test_cases:
     7E823460F03B103E036
     7E82452000000000000
 - expected_values:
+    TOYOTA_AAT: 82
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 26.66667
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
-    TOYOTA_AMBIENT_T_V2: 82
     TOYOTA_ATMOSPHERE_PRESSURE: 30
     TOYOTA_CALCULATED_LOAD_7E0: 62.7451
-    TOYOTA_COOLANT_TEMP: 20
+    TOYOTA_COOLANT_TEMP: -20
     TOYOTA_ENGINE_RUN_TIME: 6468
     TOYOTA_ENGINE_SPEED: 6914
     TOYOTA_INTAKE_AIR: 41
@@ -522,12 +522,12 @@ test_cases:
     7E823441003BA03E635
     7E82454000000000000
 - expected_values:
+    TOYOTA_AAT: 45
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 5.88235
-    TOYOTA_AMBIENT_T_V2: 45
     TOYOTA_ATMOSPHERE_PRESSURE: 48
     TOYOTA_CALCULATED_LOAD_7E0: 67.05882
-    TOYOTA_COOLANT_TEMP: 46
+    TOYOTA_COOLANT_TEMP: 6
     TOYOTA_ENGINE_RUN_TIME: 8529
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 41
