--- a/tests/test_cases/2018/commands/7C0.7C8.2121.yaml
+++ b/tests/test_cases/2018/commands/7C0.7C8.2121.yaml
@@ -2,16 +2,21 @@ command_id: 7C0.7C8.2121
 test_cases:
 - expected_values:
     TOYOTA_VSS_7C0: 0
+    TOYOTA_VSS_V2: 0
   response: 7C803612100
 - expected_values:
     TOYOTA_VSS_7C0: 15
+    TOYOTA_VSS_V2: 15
   response: 7C80361210F
 - expected_values:
     TOYOTA_VSS_7C0: 29
+    TOYOTA_VSS_V2: 29
   response: 7C80361211D
 - expected_values:
     TOYOTA_VSS_7C0: 61
+    TOYOTA_VSS_V2: 61
   response: 7C80361213D
 - expected_values:
     TOYOTA_VSS_7C0: 70
+    TOYOTA_VSS_V2: 70
   response: 7C803612146
