--- a/tests/test_cases/2019/commands/7B0.7B8.2105.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.2105.yaml
@@ -2,80 +2,80 @@ command_id: 7B0.7B8.2105
 test_cases:
 - expected_values:
     TOYOTA_DECEL: -0.07129
-    TOYOTA_DECEL2: -0.64165
+    TOYOTA_DECEL_2: -0.64165
   response: |-
     2105
     7B8100961057F7B02AE
     7B82100FFD000000000
 - expected_values:
     TOYOTA_DECEL: -2.21012
-    TOYOTA_DECEL2: -0.49906
+    TOYOTA_DECEL_2: -0.49906
   response: |-
     7B810096105707C02A6
     7B82100027300000000
 - expected_values:
     TOYOTA_DECEL: -0.92682
-    TOYOTA_DECEL2: 0.92682
+    TOYOTA_DECEL_2: 0.92682
   response: |-
     7B81009610579860647
     7B8212311F000000000
 - expected_values:
     TOYOTA_DECEL: -0.92682
-    TOYOTA_DECEL2: 1.06941
+    TOYOTA_DECEL_2: 1.06941
   response: |-
     7B810096105798709C0
     7B8214624C300000000
 - expected_values:
     TOYOTA_DECEL: -0.64165
-    TOYOTA_DECEL2: -1.78235
+    TOYOTA_DECEL_2: -1.78235
   response: |-
     7B8100961057B73027C
     7B82100FEAD00000000
 - expected_values:
     TOYOTA_DECEL: -0.64165
-    TOYOTA_DECEL2: -0.64165
+    TOYOTA_DECEL_2: -0.64165
   response: |-
     7B8100961057B7B0368
     7B82100000600000000
 - expected_values:
     TOYOTA_DECEL: -0.64165
-    TOYOTA_DECEL2: -0.35647
+    TOYOTA_DECEL_2: -0.35647
   response: |-
     7B8100961057B7D0401
     7B82100003000000000
 - expected_values:
     TOYOTA_DECEL: -0.64165
-    TOYOTA_DECEL2: 0.64165
+    TOYOTA_DECEL_2: 0.64165
   response: |-
     7B8100961057B8405FD
     7B8211F0E0C00000000
 - expected_values:
     TOYOTA_DECEL: -0.35647
-    TOYOTA_DECEL2: -2.49529
+    TOYOTA_DECEL_2: -2.49529
   response: |-
     7B8100961057D6E027B
     7B82100FFCD00000000
 - expected_values:
     TOYOTA_DECEL: -0.21388
-    TOYOTA_DECEL2: 0.92682
+    TOYOTA_DECEL_2: 0.92682
   response: |-
     7B8100961057E860690
     7B8212F123600000000
 - expected_values:
     TOYOTA_DECEL: -0.21388
-    TOYOTA_DECEL2: 2.06753
+    TOYOTA_DECEL_2: 2.06753
   response: |-
     7B8100961057E8E08AF
     7B82162265900000000
 - expected_values:
     TOYOTA_DECEL: -0.07129
-    TOYOTA_DECEL2: -0.64165
+    TOYOTA_DECEL_2: -0.64165
   response: |-
     7B8100961057F7B02F1
     7B82100FFF000000000
 - expected_values:
     TOYOTA_DECEL: 2.92306
-    TOYOTA_DECEL2: -0.35647
+    TOYOTA_DECEL_2: -0.35647
   response: |-
     7B810096105947D043A
     7B82100062300000000
