--- a/tests/test_cases/2019/commands/7C0.7C8.2112.yaml
+++ b/tests/test_cases/2019/commands/7C0.7C8.2112.yaml
@@ -1,31 +1,35 @@
 command_id: 7C0.7C8.2112
 test_cases:
 - expected_values:
-    TOYOTA_CHECK_ENGINE: 0
-    TOYOTA_P_SEATBELT_BUCKLE: 0
-    TOYOTA_TAIL_CANCEL: 0
+    TOYOTA_CHECK_ENGINE_LIGHT: 0
+    TOYOTA_EOP_LIGHT: 0
+    TOYOTA_P_SEATBELT_BUCKLE_LIGHT: 0
+    TOYOTA_TAIL_CANCEL_LIGHT: 0
   response: |-
     2112
     7C81009611200000000
     7C82100000000000000
 - expected_values:
-    TOYOTA_CHECK_ENGINE: 0
-    TOYOTA_P_SEATBELT_BUCKLE: 0
-    TOYOTA_TAIL_CANCEL: 0
+    TOYOTA_CHECK_ENGINE_LIGHT: 0
+    TOYOTA_EOP_LIGHT: 0
+    TOYOTA_P_SEATBELT_BUCKLE_LIGHT: 0
+    TOYOTA_TAIL_CANCEL_LIGHT: 0
   response: |-
     7C81009611200000000
     7C82100000000000000
 - expected_values:
-    TOYOTA_CHECK_ENGINE: 0
-    TOYOTA_P_SEATBELT_BUCKLE: 0
-    TOYOTA_TAIL_CANCEL: 0
+    TOYOTA_CHECK_ENGINE_LIGHT: 0
+    TOYOTA_EOP_LIGHT: 0
+    TOYOTA_P_SEATBELT_BUCKLE_LIGHT: 0
+    TOYOTA_TAIL_CANCEL_LIGHT: 0
   response: |-
     7C81009611200000001
     7C82100020000000000
 - expected_values:
-    TOYOTA_CHECK_ENGINE: 0
-    TOYOTA_P_SEATBELT_BUCKLE: 0
-    TOYOTA_TAIL_CANCEL: 0
+    TOYOTA_CHECK_ENGINE_LIGHT: 0
+    TOYOTA_EOP_LIGHT: 0
+    TOYOTA_P_SEATBELT_BUCKLE_LIGHT: 0
+    TOYOTA_TAIL_CANCEL_LIGHT: 0
   response: |-
     7C81009611200000002
     7C82100020000000000
