--- a/tests/test_cases/2019/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2101.yaml
@@ -1,12 +1,12 @@
 command_id: 7E0.7E8.2101
 test_cases:
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 37.2549
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 18.43137
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 132
     TOYOTA_CALCULATED_LOAD_7E0: 27.45098
-    TOYOTA_COOLANT_TEMP: 17
+    TOYOTA_COOLANT_TEMP: -23
     TOYOTA_ENGINE_RUN_TIME: 16640
     TOYOTA_ENGINE_SPEED: 15390
     TOYOTA_INTAKE_AIR: 32
@@ -28,12 +28,12 @@ test_cases:
     7E8235F2F06002D0077
     7E82433CD0000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 18.82353
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 128
     TOYOTA_CALCULATED_LOAD_7E0: 0
-    TOYOTA_COOLANT_TEMP: 0
+    TOYOTA_COOLANT_TEMP: -40
     TOYOTA_ENGINE_RUN_TIME: 0
     TOYOTA_ENGINE_SPEED: 0
     TOYOTA_INTAKE_AIR: 10
@@ -54,12 +54,12 @@ test_cases:
     7E8235130050020005C
     7E8242F260000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 18.82353
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 126
     TOYOTA_CALCULATED_LOAD_7E0: 0
-    TOYOTA_COOLANT_TEMP: 0
+    TOYOTA_COOLANT_TEMP: -40
     TOYOTA_ENGINE_RUN_TIME: 0
     TOYOTA_ENGINE_SPEED: 0
     TOYOTA_INTAKE_AIR: 21
@@ -80,12 +80,12 @@ test_cases:
     7E82351300200060018
     7E8242FC20000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 18.82353
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 82
     TOYOTA_CALCULATED_LOAD_7E0: 0
-    TOYOTA_COOLANT_TEMP: 0
+    TOYOTA_COOLANT_TEMP: -40
     TOYOTA_ENGINE_RUN_TIME: 0
     TOYOTA_ENGINE_SPEED: 0
     TOYOTA_INTAKE_AIR: 22
@@ -106,12 +106,12 @@ test_cases:
     7E8235130010002000E
     7E8242FC20000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 16.86275
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 116
     TOYOTA_CALCULATED_LOAD_7E0: 18.43137
-    TOYOTA_COOLANT_TEMP: 15
+    TOYOTA_COOLANT_TEMP: -25
     TOYOTA_ENGINE_RUN_TIME: 9984
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 18
@@ -132,12 +132,12 @@ test_cases:
     7E823512B0400130040
     7E82435B60000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.64706
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 131
     TOYOTA_CALCULATED_LOAD_7E0: 20
-    TOYOTA_COOLANT_TEMP: 19
+    TOYOTA_COOLANT_TEMP: -21
     TOYOTA_ENGINE_RUN_TIME: 52992
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 8
@@ -158,12 +158,12 @@ test_cases:
     7E823512D07003A0094
     7E82435DD0000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.2549
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 129
     TOYOTA_CALCULATED_LOAD_7E0: 20.39216
-    TOYOTA_COOLANT_TEMP: 17
+    TOYOTA_COOLANT_TEMP: -23
     TOYOTA_ENGINE_RUN_TIME: 23040
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 8
@@ -184,12 +184,12 @@ test_cases:
     7E823512C05001F0059
     7E82436040000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.2549
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 127
     TOYOTA_CALCULATED_LOAD_7E0: 21.96078
-    TOYOTA_COOLANT_TEMP: 16
+    TOYOTA_COOLANT_TEMP: -24
     TOYOTA_ENGINE_RUN_TIME: 34560
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 23
@@ -210,12 +210,12 @@ test_cases:
     7E823512C020007001A
     7E82435190000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 37.2549
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 18.03922
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 121
     TOYOTA_CALCULATED_LOAD_7E0: 22.35294
-    TOYOTA_COOLANT_TEMP: 13
+    TOYOTA_COOLANT_TEMP: -27
     TOYOTA_ENGINE_RUN_TIME: 3074
     TOYOTA_ENGINE_SPEED: 51
     TOYOTA_INTAKE_AIR: 15
@@ -236,12 +236,12 @@ test_cases:
     7E8235F2E2A027B040F
     7E824358E0000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 16.86275
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 132
     TOYOTA_CALCULATED_LOAD_7E0: 23.52941
-    TOYOTA_COOLANT_TEMP: 11
+    TOYOTA_COOLANT_TEMP: -29
     TOYOTA_ENGINE_RUN_TIME: 3584
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 20
@@ -262,12 +262,12 @@ test_cases:
     7E823512B02000D0035
     7E824342F0000000000
 - expected_values:
+    TOYOTA_AAT: 59
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 16.47059
-    TOYOTA_AMBIENT_T_V2: 59
     TOYOTA_ATMOSPHERE_PRESSURE: 133
     TOYOTA_CALCULATED_LOAD_7E0: 23.92157
-    TOYOTA_COOLANT_TEMP: 10
+    TOYOTA_COOLANT_TEMP: -30
     TOYOTA_ENGINE_RUN_TIME: 20992
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 20
@@ -288,12 +288,12 @@ test_cases:
     7E823512A02000B002A
     7E82433A60000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 16.86275
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 130
     TOYOTA_CALCULATED_LOAD_7E0: 24.31373
-    TOYOTA_COOLANT_TEMP: 11
+    TOYOTA_COOLANT_TEMP: -29
     TOYOTA_ENGINE_RUN_TIME: 10496
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 9
@@ -314,12 +314,12 @@ test_cases:
     7E823512B07003B0096
     7E82435060000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.64706
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 93
     TOYOTA_CALCULATED_LOAD_7E0: 24.31373
-    TOYOTA_COOLANT_TEMP: 16
+    TOYOTA_COOLANT_TEMP: -24
     TOYOTA_ENGINE_RUN_TIME: 43008
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 12
@@ -340,12 +340,12 @@ test_cases:
     7E823512D2902790404
     7E82436170000000000
 - expected_values:
+    TOYOTA_AAT: 59
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 16.47059
-    TOYOTA_AMBIENT_T_V2: 59
     TOYOTA_ATMOSPHERE_PRESSURE: 125
     TOYOTA_CALCULATED_LOAD_7E0: 25.09804
-    TOYOTA_COOLANT_TEMP: 9
+    TOYOTA_COOLANT_TEMP: -31
     TOYOTA_ENGINE_RUN_TIME: 19712
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 14
@@ -366,12 +366,12 @@ test_cases:
     7E823512A2A027C0410
     7E82435670000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 16.86275
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 130
     TOYOTA_CALCULATED_LOAD_7E0: 25.4902
-    TOYOTA_COOLANT_TEMP: 10
+    TOYOTA_COOLANT_TEMP: -30
     TOYOTA_ENGINE_RUN_TIME: 52480
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 30
@@ -392,12 +392,12 @@ test_cases:
     7E823512B0200090024
     7E824337F0000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.64706
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 128
     TOYOTA_CALCULATED_LOAD_7E0: 27.84314
-    TOYOTA_COOLANT_TEMP: 14
+    TOYOTA_COOLANT_TEMP: -26
     TOYOTA_ENGINE_RUN_TIME: 1280
     TOYOTA_ENGINE_SPEED: 12812
     TOYOTA_INTAKE_AIR: 25
@@ -418,12 +418,12 @@ test_cases:
     7E823512D020007001C
     7E82434080000000000
 - expected_values:
+    TOYOTA_AAT: 59
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 16.86275
-    TOYOTA_AMBIENT_T_V2: 59
     TOYOTA_ATMOSPHERE_PRESSURE: 131
     TOYOTA_CALCULATED_LOAD_7E0: 27.84314
-    TOYOTA_COOLANT_TEMP: 11
+    TOYOTA_COOLANT_TEMP: -29
     TOYOTA_ENGINE_RUN_TIME: 36352
     TOYOTA_ENGINE_SPEED: 6144
     TOYOTA_INTAKE_AIR: 23
@@ -444,12 +444,12 @@ test_cases:
     7E823512B02000B002B
     7E824337F0000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 37.64706
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 19.21569
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 117
     TOYOTA_CALCULATED_LOAD_7E0: 27.84314
-    TOYOTA_COOLANT_TEMP: 19
+    TOYOTA_COOLANT_TEMP: -21
     TOYOTA_ENGINE_RUN_TIME: 17409
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 18
@@ -470,12 +470,12 @@ test_cases:
     7E82360310400130041
     7E82435400000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 35.29412
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.64706
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 131
     TOYOTA_CALCULATED_LOAD_7E0: 30.98039
-    TOYOTA_COOLANT_TEMP: 14
+    TOYOTA_COOLANT_TEMP: -26
     TOYOTA_ENGINE_RUN_TIME: 61696
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 23
@@ -496,12 +496,12 @@ test_cases:
     7E8235A2D0200090020
     7E82433F40000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.64706
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 111
     TOYOTA_CALCULATED_LOAD_7E0: 35.29412
-    TOYOTA_COOLANT_TEMP: 10
+    TOYOTA_COOLANT_TEMP: -30
     TOYOTA_ENGINE_RUN_TIME: 65280
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 17
@@ -522,12 +522,12 @@ test_cases:
     7E823512D0200030012
     7E824352D0000000000
 - expected_values:
+    TOYOTA_AAT: 59
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 40
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 23.13725
-    TOYOTA_AMBIENT_T_V2: 59
     TOYOTA_ATMOSPHERE_PRESSURE: 102
     TOYOTA_CALCULATED_LOAD_7E0: 58.82353
-    TOYOTA_COOLANT_TEMP: 23
+    TOYOTA_COOLANT_TEMP: -17
     TOYOTA_ENGINE_RUN_TIME: 51469
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 18
@@ -548,12 +548,12 @@ test_cases:
     7E823663B030012003F
     7E82435C90000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 42.7451
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 24.70588
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 118
     TOYOTA_CALCULATED_LOAD_7E0: 69.80392
-    TOYOTA_COOLANT_TEMP: 25
+    TOYOTA_COOLANT_TEMP: -15
     TOYOTA_ENGINE_RUN_TIME: 61201
     TOYOTA_ENGINE_SPEED: 15930
     TOYOTA_INTAKE_AIR: 14
@@ -574,12 +574,12 @@ test_cases:
     7E8236D3F2A027B040E
     7E82435A20000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 49.80392
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 32.15686
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 126
     TOYOTA_CALCULATED_LOAD_7E0: 78.82353
-    TOYOTA_COOLANT_TEMP: 39
+    TOYOTA_COOLANT_TEMP: -1
     TOYOTA_ENGINE_RUN_TIME: 46118
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 21
@@ -600,12 +600,12 @@ test_cases:
     7E8237F520400150045
     7E82435060000000000
 - expected_values:
+    TOYOTA_AAT: 59
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 45.4902
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 28.62745
-    TOYOTA_AMBIENT_T_V2: 59
     TOYOTA_ATMOSPHERE_PRESSURE: 130
     TOYOTA_CALCULATED_LOAD_7E0: 80.78431
-    TOYOTA_COOLANT_TEMP: 29
+    TOYOTA_COOLANT_TEMP: -11
     TOYOTA_ENGINE_RUN_TIME: 33049
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 21
@@ -626,12 +626,12 @@ test_cases:
     7E82374490200090027
     7E824341B0000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 50.58824
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 34.11765
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 123
     TOYOTA_CALCULATED_LOAD_7E0: 80.78431
-    TOYOTA_COOLANT_TEMP: 39
+    TOYOTA_COOLANT_TEMP: -1
     TOYOTA_ENGINE_RUN_TIME: 34857
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 8
@@ -652,12 +652,12 @@ test_cases:
     7E823815705001C0056
     7E82435400000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 49.01961
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 32.15686
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 111
     TOYOTA_CALCULATED_LOAD_7E0: 81.96078
-    TOYOTA_COOLANT_TEMP: 34
+    TOYOTA_COOLANT_TEMP: -6
     TOYOTA_ENGINE_RUN_TIME: 46114
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 15
@@ -678,12 +678,12 @@ test_cases:
     7E8237D522A027A040D
     7E824352D0000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 59.21569
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 49.80392
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 129
     TOYOTA_CALCULATED_LOAD_7E0: 92.15686
-    TOYOTA_COOLANT_TEMP: 33
+    TOYOTA_COOLANT_TEMP: -7
     TOYOTA_ENGINE_RUN_TIME: 45393
     TOYOTA_ENGINE_SPEED: 2853
     TOYOTA_INTAKE_AIR: 8
@@ -704,12 +704,12 @@ test_cases:
     7E823977F0700390094
     7E82435A20000000000
 - expected_values:
+    TOYOTA_AAT: 60
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 51.76471
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 38.03922
-    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 73
     TOYOTA_CALCULATED_LOAD_7E0: 95.68627
-    TOYOTA_COOLANT_TEMP: 35
+    TOYOTA_COOLANT_TEMP: -5
     TOYOTA_ENGINE_RUN_TIME: 16434
     TOYOTA_ENGINE_SPEED: 16383
     TOYOTA_INTAKE_AIR: 18
