--- a/tests/test_cases/2024/commands/700.708.221627.yaml
+++ b/tests/test_cases/2024/commands/700.708.221627.yaml
@@ -1,11 +1,11 @@
 command_id: 700.708.221627
 test_cases:
 - expected_values:
+    TOYOTA_ATF_T_PAN_V3: 40
+  response: '708056216275000'
+- expected_values:
     TOYOTA_ATF_T_PAN_V3: 41.875
   response: '7080562162751E0'
-- expected_values:
-    TOYOTA_ATF_T_PAN_V3: 50
-  response: 708056216275A00
 - expected_values:
     TOYOTA_ATF_T_PAN_V3: 61.875
   response: '7080562162765E0'
