--- a/tests/test_cases/2015/commands/7C0.7C8.2123.yaml
+++ b/tests/test_cases/2015/commands/7C0.7C8.2123.yaml
@@ -2,12 +2,15 @@ command_id: 7C0.7C8.2123
 test_cases:
 - expected_values:
     TOYOTA_COOLANT_T: 87
+    TOYOTA_ECT_7C0: 87
   response: |-
     2123
     7C8036123AE
 - expected_values:
     TOYOTA_COOLANT_T: 0
+    TOYOTA_ECT_7C0: 0
   response: 7C803612300
 - expected_values:
     TOYOTA_COOLANT_T: 91
+    TOYOTA_ECT_7C0: 91
   response: 7C8036123B6
