--- a/tests/test_cases/2015/commands/7C4.7CC.2124.yaml
+++ b/tests/test_cases/2015/commands/7C4.7CC.2124.yaml
@@ -1,27 +1,27 @@
 command_id: 7C4.7CC.2124
 test_cases:
 - expected_values:
-    TOYOTA_SOLAR_D_SIDE: 4
+    TOYOTA_SOLAR_DRIVER: 4
   response: |-
     2124
     7CC03612404
 - expected_values:
-    TOYOTA_SOLAR_D_SIDE: 4
+    TOYOTA_SOLAR_DRIVER: 4
   response: |-
     21241
     7CC03612404
 - expected_values:
-    TOYOTA_SOLAR_D_SIDE: 4
+    TOYOTA_SOLAR_DRIVER: 4
   response: 7CC03612404
 - expected_values:
-    TOYOTA_SOLAR_D_SIDE: 5
+    TOYOTA_SOLAR_DRIVER: 5
   response: 7CC03612405
 - expected_values:
-    TOYOTA_SOLAR_D_SIDE: 6
+    TOYOTA_SOLAR_DRIVER: 6
   response: 7CC03612406
 - expected_values:
-    TOYOTA_SOLAR_D_SIDE: 7
+    TOYOTA_SOLAR_DRIVER: 7
   response: 7CC03612407
 - expected_values:
-    TOYOTA_SOLAR_D_SIDE: 8
+    TOYOTA_SOLAR_DRIVER: 8
   response: 7CC03612408
