--- a/tests/test_cases/2016/command_support.yaml
+++ b/tests/test_cases/2016/command_support.yaml
@@ -53,7 +53,7 @@ supported_commands_by_ecu:
   - 7E0.0131:CLR_DIST
   - 7E0.7E8.2121:TOYOTA_CC_CANCEL_SWITCH_ON,TOYOTA_CC_CCS_INDICATOR_M_CPU_ON,TOYOTA_CC_CCS_READY_M_CPU_ON,TOYOTA_CC_CC_ON,TOYOTA_CC_DRIVING_FORCE,TOYOTA_CC_LIVE_SET_COAST_SWITCH_ON,TOYOTA_CC_MAIN_SW_M_CPU_ON,TOYOTA_CC_ON,TOYOTA_CC_RES_ACC_SWITCH_ON,TOYOTA_CC_S,TOYOTA_CC_STOP_LIGHT_SWITCH_1_ON,TOYOTA_CC_STOP_LIGHT_SWITCH_2_ON,TOYOTA_CC_VSS
   - 7E0.7E8.2128:TOYOTA_ODO
-  - 7E0.7E8.2151:TOYOTA_AC_AMB_T,TOYOTA_AC_FB,TOYOTA_ELEC_LOAD_FB,TOYOTA_ENG_SPD_START_OFF,TOYOTA_ENG_START_HESIT,TOYOTA_ENG_START_T,TOYOTA_EOT,TOYOTA_EOT_V2,TOYOTA_IMMOB_FUEL_CUT,TOYOTA_ISC_FB,TOYOTA_ISC_FLOW,TOYOTA_ISC_LEARN,TOYOTA_ISC_POS,TOYOTA_LOW_RPM_CTRL,TOYOTA_LOW_RPM_START,TOYOTA_NEUTRAL_CTRL,TOYOTA_N_RANGE_STS,TOYOTA_PREV_TRIP_AMB_T,TOYOTA_PREV_TRIP_DST,TOYOTA_PREV_TRIP_EOT,TOYOTA_PREV_TRIP_IAT,TOYOTA_STARTER_CNT,TOYOTA_TPS,TOYOTA_VVTOT,TOYOTA_VVT_ADV_FAIL
+  - 7E0.7E8.2151:TOYOTA_AC_AMB_T,TOYOTA_AC_FB,TOYOTA_ELEC_LOAD_FB,TOYOTA_ENG_SPD_START_OFF,TOYOTA_ENG_START_HESIT,TOYOTA_ENG_START_T,TOYOTA_EOT,TOYOTA_EOT_V3,TOYOTA_IMMOB_FUEL_CUT,TOYOTA_ISC_FB,TOYOTA_ISC_FLOW,TOYOTA_ISC_LEARN,TOYOTA_ISC_POS,TOYOTA_LOW_RPM_CTRL,TOYOTA_LOW_RPM_START,TOYOTA_NEUTRAL_CTRL,TOYOTA_N_RANGE_STS,TOYOTA_PREV_TRIP_AMB_T,TOYOTA_PREV_TRIP_DST,TOYOTA_PREV_TRIP_EOT,TOYOTA_PREV_TRIP_IAT,TOYOTA_STARTER_CNT,TOYOTA_TPS,TOYOTA_VVTOT,TOYOTA_VVT_ADV_FAIL
   - 7E0.7E8.2182:TOYOTA_ATF_PAN_T,TOYOTA_ATF_TQC_T
   - 7E0.7E8.2185:TOYOTA_GEAR,TOYOTA_GEAR_V2,TOYOTA_TQC_LOCKUP
 unsupported_commands_by_ecu:
@@ -61,7 +61,7 @@ unsupported_commands_by_ecu:
   - 6F1.221700|e=40,fc=1:TOYOTA_ODO_V3
   - 6F1.224AB1|e=12,fc=1:TOYOTA_VSS2
   - 6F1.22586F|e=12,fc=1:TOYOTA_EOP_V2
-  - 6F1.22D107|e=60,fc=1:TOYOTA_VSS_V2
+  - 6F1.22D107|e=60,fc=1:TOYOTA_VSS_V3
   - 6F1.22D10D|e=60,fc=1:TOYOTA_ODO_V2,TOYOTA_ODO_V2
   - 6F1.22D240|e=0D,fc=1:TOYOTA_VSS_INSTR
   - 6F1.22DA12|e=18,fc=1:TOYOTA_ATF_TEMP_V2
@@ -109,7 +109,7 @@ unsupported_commands_by_ecu:
   "7C0":
   - 7C0.221022
   - 7C0.7C8.2129:TOYOTA_FLI_VOL,TOYOTA_FUEL_INPUT
-  - 7C0.7C8.221021:TOYOTA_BATTERY_VOLTAGE
+  - 7C0.7C8.221021:TOYOTA_BATTERY_VOLTAGE_V2
   - 7C0.7C8.221022:TOYOTA_FLV,TOYOTA_FUEL_LEVEL
   "7D2":
   - 7D2.22106C
