--- a/tests/test_cases/2018/commands/7C0.7C8.2123.yaml
+++ b/tests/test_cases/2018/commands/7C0.7C8.2123.yaml
@@ -2,7 +2,9 @@ command_id: 7C0.7C8.2123
 test_cases:
 - expected_values:
     TOYOTA_COOLANT_T: 90.5
+    TOYOTA_ECT_7C0: 90.5
   response: 7C8036123B5
 - expected_values:
     TOYOTA_COOLANT_T: 91
+    TOYOTA_ECT_7C0: 91
   response: 7C8036123B6
