--- a/tests/test_cases/2018/commands/7C4.7CC.2122.yaml
+++ b/tests/test_cases/2018/commands/7C4.7CC.2122.yaml
@@ -1,11 +1,11 @@
 command_id: 7C4.7CC.2122
 test_cases:
 - expected_values:
-    TOYOTA_AAT: 26.4
+    TOYOTA_AAT_7C4: 26.4
   response: 7CC0361228E
 - expected_values:
-    TOYOTA_AAT: 27.1
+    TOYOTA_AAT_7C4: 27.1
   response: 7CC03612290
 - expected_values:
-    TOYOTA_AAT: 27.8
+    TOYOTA_AAT_7C4: 27.8
   response: 7CC03612292
