--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -6,14 +6,14 @@ supported_commands_by_ecu:
   - 750.758.2130|e=2A,ta=2A,fc=1:TOYOTA_TIRE_P_FL,TOYOTA_TIRE_P_FR,TOYOTA_TIRE_P_RL,TOYOTA_TIRE_P_RR,TOYOTA_TIRE_P_SPARE,TOYOTA_TP_FL,TOYOTA_TP_FR,TOYOTA_TP_RL,TOYOTA_TP_RR,TOYOTA_TP_SPARE
   "7B0":
   - 7B0.7B8.2103:TOYOTA_TIRE_FL_SPD,TOYOTA_TIRE_FR_SPD,TOYOTA_TIRE_RL_SPD,TOYOTA_TIRE_RR_SPD
-  - 7B0.7B8.2105:TOYOTA_DECEL,TOYOTA_DECEL2
+  - 7B0.7B8.2105:TOYOTA_DECEL,TOYOTA_DECEL_2
   - 7B0.7B8.2106:TOYOTA_YAW_1,TOYOTA_YAW_2,TOYOTA_YAW_RATE,TOYOTA_YAW_RATE2
   - 7B0.7B8.211D:TOYOTA_MAIN_IDLE_SW,TOYOTA_RESERVOIR_WARNING_SW
   - 7B0.7B8.211F:TOYOTA_PARKING_BRAKE_SW,TOYOTA_STOP_LIGHT_SW
   - 7B0.7B8.2121:TOYOTA_VEHICLE_SPEED_7B0,TOYOTA_VSS,TOYOTA_VSS_V3
   - 7B0.7B8.213C:TOYOTA_STOP_LIGHT_RELAY
   - 7B0.7B8.213D:TOYOTA_ABS_WARN,TOYOTA_BRAKE_WARN,TOYOTA_BUZZER,TOYOTA_ECB_WARN,TOYOTA_SLIP_WARN
-  - 7B0.7B8.2142:TOYOTA_FL_ACC,TOYOTA_FR_ACC,TOYOTA_RL_ACC,TOYOTA_RR_ACC
+  - 7B0.7B8.2142:TOYOTA_FL_WHEEL_ACCELERATION,TOYOTA_FR_WHEEL_ACCELERATION,TOYOTA_RL_WHEEL_ACCELERATION,TOYOTA_RR_WHEEL_ACCELERATION
   - 7B0.7B8.2146:TOYOTA_ZP_DEC,TOYOTA_ZP_DEC2,TOYOTA_ZP_YAW,TOYOTA_ZP_YAW_RATE
   - 7B0.7B8.2147:TOYOTA_LAT_G,TOYOTA_LNG_G,TOYOTA_STEERING_ANGLE,TOYOTA_STEER_ANGLE,TOYOTA_YAW,TOYOTA_YAW_RATE_V2
   - 7B0.7B8.215A:TOYOTA_FL_WHEEL_VSC_CTRL,TOYOTA_FR_WHEEL_VSC_CTRL,TOYOTA_RL_WHEEL_VSC_CTRL,TOYOTA_RR_WHEEL_VSC_CTRL,TOYOTA_TRC_TRAC__BRAKE_CTRL,TOYOTA_TRC_TRAC__CTRL,TOYOTA_TRC_TRAC__ENGINE_CTRL
@@ -21,14 +21,14 @@ supported_commands_by_ecu:
   - 7B0.7B8.21A6:TOYOTA_INSPECTION_MODE
   - 7B0.7B8.21BE:TOYOTA_ACCUMULATOR_OPEN,TOYOTA_DECELERATION_OPEN,TOYOTA_FL_WHEEL_SPEED_OPEN,TOYOTA_FR_WHEEL_CYLINDER_OPEN,TOYOTA_FR_WHEEL_SPEED_OPEN,TOYOTA_HV_COMMUNICATION_OPEN,TOYOTA_HV_COMM_OPEN,TOYOTA_MASTER_CYLINDER_OPEN,TOYOTA_RL_WHEEL_SPEED_OPEN,TOYOTA_RR_WHEEL_SPEED_OPEN,TOYOTA_STROKE_OPEN,TOYOTA_YAW_RATE_OPEN_ERROR
   "7C0":
-  - 7C0.21A7:TOYOTA_SEAT_BELT_BEEP
-  - 7C0.7C8.2112:TOYOTA_CHECK_ENGINE,TOYOTA_P_SEATBELT_BUCKLE,TOYOTA_TAIL_CANCEL
-  - 7C0.7C8.2121:TOYOTA_VSS_7C0
-  - 7C0.7C8.2123:TOYOTA_COOLANT_T
+  - 7C0.7C8.2112:TOYOTA_CHECK_ENGINE_LIGHT,TOYOTA_EOP_LIGHT,TOYOTA_P_SEATBELT_BUCKLE_LIGHT,TOYOTA_TAIL_CANCEL_LIGHT
+  - 7C0.7C8.2121:TOYOTA_VSS_7C0,TOYOTA_VSS_V2
+  - 7C0.7C8.2123:TOYOTA_COOLANT_T,TOYOTA_ECT_7C0
+  - 7C0.7C8.21A7:TOYOTA_SEAT_BELT_BEEP,TOYOTA_SEAT_BELT_BEEP_DRIVER,TOYOTA_SEAT_BELT_BEEP_PASSENGER,TOYOTA_SEAT_BELT_BEEP_REMINDER
   "7C4":
   - 7C4.2143:TOYOTA_AIR_OUTLET_SERVO_ACTU_PULSE_D,TOYOTA_AIR_OUTLET_SERVO_PULSE_D
   - 7C4.2144:TOYOTA_AIR_INLET_DAMPER_ACTUAL_PULSE,TOYOTA_AIR_INLET_DAMPER_TARGET_PULSE
-  - 7C4.7CC.2122:TOYOTA_AAT
+  - 7C4.7CC.2122:TOYOTA_AAT_7C4
   - 7C4.7CC.2126:TOYOTA_ECT
   - 7C4.7CC.213D:TOYOTA_ADJUSTED_AMBIENT_T
   - 7C4.7CC.214B:TOYOTA_EVAP_FIN_THERMISTOR
@@ -102,14 +102,14 @@ supported_commands_by_ecu:
   - 7E0.0144:EQ_RAT
   - 7E0.014D:MIL_TIME
   - 7E0.014E:CLR_TIME
-  - 7E0.7E8.2101:TOYOTA_ACCEL_SENS_NO_1_VOLT,TOYOTA_ACCEL_SENS_NO_2_VOLT,TOYOTA_AMBIENT_T_V2,TOYOTA_ATMOSPHERE_PRESSURE,TOYOTA_BATTERY_VOLTAGE_V2,TOYOTA_CALCULATED_LOAD_7E0,TOYOTA_COOLANT_TEMP,TOYOTA_ENGINE_RUN_TIME,TOYOTA_ENGINE_SPEED,TOYOTA_INTAKE_AIR,TOYOTA_MAF,TOYOTA_MAP,TOYOTA_THROTTLE_MOTOR_DUTY,TOYOTA_THROTTLE_SENSOR_POSITION,TOYOTA_THROTTLE_SENSOR_VOLT,TOYOTA_THROTTL_SENSOR_2_VOLT,TOYOTA_TIME_AFTER_DTC_CLEARED,TOYOTA_VEHICLE_LOAD,TOYOTA_VEHICLE_SPEED,TOYOTA_WARMUP_CYCLE_CLEARED_DTC
+  - 7E0.7E8.2101:TOYOTA_AAT,TOYOTA_ACCEL_SENS_NO_1_VOLT,TOYOTA_ACCEL_SENS_NO_2_VOLT,TOYOTA_ATMOSPHERE_PRESSURE,TOYOTA_BATTERY_VOLTAGE,TOYOTA_CALCULATED_LOAD_7E0,TOYOTA_COOLANT_TEMP,TOYOTA_ENGINE_RUN_TIME,TOYOTA_ENGINE_SPEED,TOYOTA_INTAKE_AIR,TOYOTA_MAF,TOYOTA_MAP,TOYOTA_THROTTLE_MOTOR_DUTY,TOYOTA_THROTTLE_SENSOR_POSITION,TOYOTA_THROTTLE_SENSOR_VOLT,TOYOTA_THROTTL_SENSOR_2_VOLT,TOYOTA_TIME_AFTER_DTC_CLEARED,TOYOTA_VEHICLE_LOAD,TOYOTA_VEHICLE_SPEED,TOYOTA_WARMUP_CYCLE_CLEARED_DTC
   - 7E0.7E8.2104:TOYOTA_AFS_CURRENT_B1S1,TOYOTA_AFS_VOLTAGE_B1S1,TOYOTA_AF_LAMBDA_B1S1,TOYOTA_O2S_B1S2,TOYOTA_TARGET_AIR_FUEL_RATIO
   - 7E0.7E8.2105:TOYOTA_CATALYST_T_B1S1,TOYOTA_CATALYST_T_B1S2
   - 7E0.7E8.2106:TOYOTA_2ND_AIR_MONITOR_AVAIL,TOYOTA_2ND_AIR_MONITOR_INCMPL,TOYOTA_A_C_MONITOR_AVAIL,TOYOTA_A_C_MONITOR_INCMPL,TOYOTA_CATALYST_MONITOR_AVAIL,TOYOTA_CATALYST_MONITOR_INCMPL,TOYOTA_COMPLETE_PARTS_MONITOR_AVAIL,TOYOTA_EGR_VVT_MONITOR_AVAIL,TOYOTA_EGR_VVT_MONITOR_INCMPL,TOYOTA_EVAP_MONITOR_AVAIL,TOYOTA_EVAP_MONITOR_ICMPL,TOYOTA_FUEL_SYSTEM_MONITOR_AVAIL,TOYOTA_HEATED_CATALYST_MONITOR_AVAIL,TOYOTA_HEATED_CATALYST_MONITOR_INCMPL,TOYOTA_MIL,TOYOTA_MILON_RUN_DISTANCE,TOYOTA_MISFIRE_MONITOR_AVAIL,TOYOTA_NUMBER_OF_EMISSION_DTC,TOYOTA_O2S_A_FS_HEATER_MONITOR_AVAIL,TOYOTA_O2S_A_FS_HEATER_MONITOR_INCMPL,TOYOTA_O2S_A_FS_MONITOR_AVAIL,TOYOTA_O2S_A_FS_MONITOR_INCMPL,TOYOTA_RUNNING_TIME_FROM_MIL_ON
-  - 7E0.7E8.2125:TOYOTA_A_C_COMPRESSOR,TOYOTA_CRUISE_CONTROL_LIVE_BRAKE_CANCEL_SWITCH,TOYOTA_ELECTRICAL_LOAD_SIGNAL_1,TOYOTA_ELECTRICAL_LOAD_SIGNAL_2,TOYOTA_NEUTRAL_POSITION_SW_SIGNAL,TOYOTA_PATTERN_SWITCH_PWR_M_,TOYOTA_POWER_STEERING_SIGNAL,TOYOTA_SHIFT_SW_STATUS_D_RANGE,TOYOTA_SHIFT_SW_STATUS_N_RANGE,TOYOTA_SHIFT_SW_STATUS_P_RANGE,TOYOTA_SHIFT_SW_STATUS_R_RANGE,TOYOTA_SPORTS_MODE_SELECTION_SW,TOYOTA_SPORTS_SHIFT_DOWN_SW,TOYOTA_SPORTS_SHIFT_UP_SW,TOYOTA_STARTER_CONTROL,TOYOTA_STARTER_SIGNAL,TOYOTA_STOP_LIGHT_SWITCH,TOYOTA_TC_TERMINAL
+  - 7E0.7E8.2125:TOYOTA_A_C_COMPRESSOR,TOYOTA_CRUISE_CONTROL_LIVE_BRAKE_CANCEL_SWITCH,TOYOTA_ELECTRICAL_LOAD_SIGNAL_1,TOYOTA_ELECTRICAL_LOAD_SIGNAL_2,TOYOTA_NEUTRAL_POSITION_SW_SIGNAL,TOYOTA_PATTERN_SWITCH_PWR_M,TOYOTA_POWER_STEERING_SIGNAL,TOYOTA_SHIFT_SW_STATUS_D_RANGE,TOYOTA_SHIFT_SW_STATUS_N_RANGE,TOYOTA_SHIFT_SW_STATUS_P_RANGE,TOYOTA_SHIFT_SW_STATUS_R_RANGE,TOYOTA_SPORTS_MODE_SELECTION_SW,TOYOTA_SPORTS_SHIFT_DOWN_SW,TOYOTA_SPORTS_SHIFT_UP_SW,TOYOTA_STARTER_CONTROL,TOYOTA_STARTER_SIGNAL,TOYOTA_STOP_LIGHT_SWITCH,TOYOTA_TC_TERMINAL
   - 7E0.7E8.2128:TOYOTA_ODO
   - 7E0.7E8.2145:TOYOTA_ALL_CYLINDERS_MISFIRE_CNT,TOYOTA_CYL1_MISFIRE_CNT,TOYOTA_CYL2_MISFIRE_CNT,TOYOTA_CYL3_MISFIRE_CNT,TOYOTA_CYL4_MISFIRE_CNT,TOYOTA_IGNITION_TRIG_CNT,TOYOTA_MISFIRE_LOAD_V2,TOYOTA_MISFIRE_MARGIN_V2,TOYOTA_MISFIRE_RPM_V2
-  - 7E0.7E8.2151:TOYOTA_AC_AMB_T,TOYOTA_AC_FB,TOYOTA_ELEC_LOAD_FB,TOYOTA_ENG_SPD_START_OFF,TOYOTA_ENG_START_HESIT,TOYOTA_ENG_START_T,TOYOTA_EOT,TOYOTA_EOT_V2,TOYOTA_IMMOB_FUEL_CUT,TOYOTA_ISC_FB,TOYOTA_ISC_FLOW,TOYOTA_ISC_LEARN,TOYOTA_ISC_POS,TOYOTA_LOW_RPM_CTRL,TOYOTA_LOW_RPM_START,TOYOTA_NEUTRAL_CTRL,TOYOTA_N_RANGE_STS,TOYOTA_PREV_TRIP_AMB_T,TOYOTA_PREV_TRIP_DST,TOYOTA_PREV_TRIP_EOT,TOYOTA_PREV_TRIP_IAT,TOYOTA_STARTER_CNT,TOYOTA_TPS,TOYOTA_VVTOT,TOYOTA_VVT_ADV_FAIL
+  - 7E0.7E8.2151:TOYOTA_AC_AMB_T,TOYOTA_AC_FB,TOYOTA_ELEC_LOAD_FB,TOYOTA_ENG_SPD_START_OFF,TOYOTA_ENG_START_HESIT,TOYOTA_ENG_START_T,TOYOTA_EOT,TOYOTA_EOT_V3,TOYOTA_IMMOB_FUEL_CUT,TOYOTA_ISC_FB,TOYOTA_ISC_FLOW,TOYOTA_ISC_LEARN,TOYOTA_ISC_POS,TOYOTA_LOW_RPM_CTRL,TOYOTA_LOW_RPM_START,TOYOTA_NEUTRAL_CTRL,TOYOTA_N_RANGE_STS,TOYOTA_PREV_TRIP_AMB_T,TOYOTA_PREV_TRIP_DST,TOYOTA_PREV_TRIP_EOT,TOYOTA_PREV_TRIP_IAT,TOYOTA_STARTER_CNT,TOYOTA_TPS,TOYOTA_VVTOT,TOYOTA_VVT_ADV_FAIL
   - 7E0.7E8.2182:TOYOTA_ATF_PAN_T,TOYOTA_ATF_TQC_T
   - 7E0.7E8.2185:TOYOTA_GEAR,TOYOTA_GEAR_V2,TOYOTA_TQC_LOCKUP
 unsupported_commands_by_ecu:
@@ -117,7 +117,7 @@ unsupported_commands_by_ecu:
   - 6F1.221700|e=40,fc=1:TOYOTA_ODO_V3
   - 6F1.224AB1|e=12,fc=1:TOYOTA_VSS2
   - 6F1.22586F|e=12,fc=1:TOYOTA_EOP_V2
-  - 6F1.22D107|e=60,fc=1:TOYOTA_VSS_V2
+  - 6F1.22D107|e=60,fc=1:TOYOTA_VSS_V3
   - 6F1.22D10D|e=60,fc=1:TOYOTA_ODO_V2,TOYOTA_ODO_V2
   - 6F1.22D240|e=0D,fc=1:TOYOTA_VSS_INSTR
   - 6F1.22DA12|e=18,fc=1:TOYOTA_ATF_TEMP_V2
@@ -134,7 +134,7 @@ unsupported_commands_by_ecu:
   - 6F1.22DFE7|e=19,fc=1:TOYOTA_OIL_CHANGE_DIST,TOYOTA_VGT_CAL_ANGLE
   "700":
   - 700.221F2F:TOYOTA_FLI
-  - 700.708.221002:TOYOTA_12V_V,TOYOTA_BAT_VOLTAGE
+  - 700.708.221002:TOYOTA_12V_V
   - 700.708.221017:TOYOTA_INJ_VOL
   - 700.708.221018:TOYOTA_INJECTOR_PORT
   - 700.708.221019:TOYOTA_INJECTION
@@ -153,7 +153,7 @@ unsupported_commands_by_ecu:
   - 700.708.221074:TOYOTA_ENG_OIL_PRESS,TOYOTA_EOP
   - 700.708.221075:TOYOTA_IWP_SPEED
   - 700.708.221078:TOYOTA_IDLE_SAC_CYL_1,TOYOTA_IDLE_SAC_CYL_2,TOYOTA_IDLE_SAC_CYL_3,TOYOTA_IDLE_SAC_CYL_4
-  - 700.708.22107B:TOYOTA_EOT_V2,TOYOTA_EOT_V2_V2
+  - 700.708.22107B:TOYOTA_EOT_V2,TOYOTA_EOT_V2
   - 700.708.221084:TOYOTA_ROUGH_IDLE_1,TOYOTA_ROUGH_IDLE_2,TOYOTA_ROUGH_IDLE_3,TOYOTA_ROUGH_IDLE_4,TOYOTA_ROUGH_IDLE_CYL_1,TOYOTA_ROUGH_IDLE_CYL_2,TOYOTA_ROUGH_IDLE_CYL_3,TOYOTA_ROUGH_IDLE_CYL_4
   - 700.708.221087:TOYOTA_INTAKE_VVT_CHANGE_ANGLE_BANK_1
   - 700.708.221088:TOYOTA_EXHAUST_VVT_ANGLE_B1
@@ -203,7 +203,7 @@ unsupported_commands_by_ecu:
   - 700.708.221F3E:TOYOTA_CAT_T_12
   - 700.708.221F3F
   - 700.708.221F46:TOYOTA_AMBIENT_T
-  - 700.708.221F5C:TOYOTA_EOT_V2_V3,TOYOTA_EOT_V3
+  - 700.708.221F5C:TOYOTA_EOT_V2_V2,TOYOTA_EOT_V3_V2
   - 700.708.221F6D:TOYOTA_HFP_ACTUAL,TOYOTA_HFP_TARGET,TOYOTA_LOW_FUEL_PRESSURE
   - 700.708.221F77
   - 700.708.221F7A
@@ -267,12 +267,12 @@ unsupported_commands_by_ecu:
   "7C0":
   - 7C0.221022
   - 7C0.7C8.2129:TOYOTA_FLI_VOL,TOYOTA_FUEL_INPUT
-  - 7C0.7C8.221021:TOYOTA_BATTERY_VOLTAGE
+  - 7C0.7C8.221021:TOYOTA_BATTERY_VOLTAGE_V2
   - 7C0.7C8.221022:TOYOTA_FLV,TOYOTA_FUEL_LEVEL
   "7C4":
   - 7C4.214C:TOYOTA_EVAP_TARGET_T
   - 7C4.7CC.2121:TOYOTA_CABIN_T
-  - 7C4.7CC.2124:TOYOTA_SOLAR_D_SIDE
+  - 7C4.7CC.2124:TOYOTA_SOLAR_DRIVER
   - 7C4.7CC.2129:TOYOTA_T_DRIVER
   - 7C4.7CC.213C:TOYOTA_BLOWER_MOTOR_SPEED_LEVEL
   - 7C4.7CC.2153:TOYOTA_REGULATOR_P
@@ -308,4 +308,4 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.2103:TOYOTA_EVAP_PURGE_DUTY,TOYOTA_IGN_ADVANCE,TOYOTA_LONG_FT_B1S1,TOYOTA_SHORT_FT_B1S1
   - 7E0.7E8.2121:TOYOTA_CC_CANCEL_SWITCH_ON,TOYOTA_CC_CCS_INDICATOR_M_CPU_ON,TOYOTA_CC_CCS_READY_M_CPU_ON,TOYOTA_CC_CC_ON,TOYOTA_CC_DRIVING_FORCE,TOYOTA_CC_LIVE_SET_COAST_SWITCH_ON,TOYOTA_CC_MAIN_SW_M_CPU_ON,TOYOTA_CC_ON,TOYOTA_CC_RES_ACC_SWITCH_ON,TOYOTA_CC_S,TOYOTA_CC_STOP_LIGHT_SWITCH_1_ON,TOYOTA_CC_STOP_LIGHT_SWITCH_2_ON,TOYOTA_CC_VSS
   - 7E0.7E8.2124:TOYOTA_COMMUNICATION_WITH_BRAKE,TOYOTA_COMMUNICATION_WITH_HV,TOYOTA_COMM_WITH_AIR_CONDITIONER,TOYOTA_COMM_WITH_VALVEMATIC_COMM
-  - 7E0.7E8.21DA:TOYOTA_GEAR_V2_V2
+  - 7E0.7E8.21DA:TOYOTA_GEAR_V3
