--- a/tests/test_cases/2019/commands/7C0.7C8.2121.yaml
+++ b/tests/test_cases/2019/commands/7C0.7C8.2121.yaml
@@ -2,12 +2,15 @@ command_id: 7C0.7C8.2121
 test_cases:
 - expected_values:
     TOYOTA_VSS_7C0: 17
+    TOYOTA_VSS_V2: 17
   response: |-
     21211
     7C803612111
 - expected_values:
     TOYOTA_VSS_7C0: 0
+    TOYOTA_VSS_V2: 0
   response: 7C803612100
 - expected_values:
     TOYOTA_VSS_7C0: 72
+    TOYOTA_VSS_V2: 72
   response: 7C803612148
