--- a/tests/test_cases/2019/commands/7C0.7C8.2123.yaml
+++ b/tests/test_cases/2019/commands/7C0.7C8.2123.yaml
@@ -2,12 +2,15 @@ command_id: 7C0.7C8.2123
 test_cases:
 - expected_values:
     TOYOTA_COOLANT_T: 93
+    TOYOTA_ECT_7C0: 93
   response: |-
     2123
     7C8036123BA
 - expected_values:
     TOYOTA_COOLANT_T: 0
+    TOYOTA_ECT_7C0: 0
   response: 7C803612300
 - expected_values:
     TOYOTA_COOLANT_T: 95.5
+    TOYOTA_ECT_7C0: 95.5
   response: 7C8036123BF
