--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -11,14 +11,14 @@ supported_commands_by_ecu:
   - 700.708.22106F:TOYOTA_INTAKE_VVT_TARGET_ANGLE_B1
   - 700.708.221071:TOYOTA_EXHAUST_VVT_TARGET_ANGLE_B1
   - 700.708.221074:TOYOTA_ENG_OIL_PRESS,TOYOTA_EOP
-  - 700.708.22107B:TOYOTA_EOT_V2,TOYOTA_EOT_V2_V2
+  - 700.708.22107B:TOYOTA_EOT_V2,TOYOTA_EOT_V2
   - 700.708.221087:TOYOTA_INTAKE_VVT_CHANGE_ANGLE_BANK_1
   - 700.708.2210A5:TOYOTA_MISFIRE_CNT
   - 700.708.2210AA:TOYOTA_MISFIRE_LOAD,TOYOTA_MISFIRE_MARGIN,TOYOTA_MISFIRE_RPM
   - 700.708.2210CD:TOYOTA_LFP,TOYOTA_LFPS
   - 700.708.221F3C:TOYOTA_CAT_T_11
   - 700.708.221F3E:TOYOTA_CAT_T_12
-  - 700.708.221F5C:TOYOTA_EOT_V2_V3,TOYOTA_EOT_V3
+  - 700.708.221F5C:TOYOTA_EOT_V2_V2,TOYOTA_EOT_V3_V2
   "701":
   - 701.709.220103:TOYOTA_ODO_V5
   - 701.709.221627:TOYOTA_ATF_T_PAN,TOYOTA_TF1_PAN,TOYOTA_TFP_T
@@ -32,7 +32,7 @@ supported_commands_by_ecu:
   - 7B3.7BB.221004:TOYOTA_STEERING_ANGLE_V2
   "7C0":
   - 7C0.221022
-  - 7C0.7C8.221021:TOYOTA_BATTERY_VOLTAGE
+  - 7C0.7C8.221021:TOYOTA_BATTERY_VOLTAGE_V2
   "7D2":
   - 7D2.22106C
   - 7D2.221F0D
@@ -187,7 +187,7 @@ unsupported_commands_by_ecu:
   - 6F1.221700|e=40,fc=1:TOYOTA_ODO_V3
   - 6F1.224AB1|e=12,fc=1:TOYOTA_VSS2
   - 6F1.22586F|e=12,fc=1:TOYOTA_EOP_V2
-  - 6F1.22D107|e=60,fc=1:TOYOTA_VSS_V2
+  - 6F1.22D107|e=60,fc=1:TOYOTA_VSS_V3
   - 6F1.22D10D|e=60,fc=1:TOYOTA_ODO_V2,TOYOTA_ODO_V2
   - 6F1.22D240|e=0D,fc=1:TOYOTA_VSS_INSTR
   - 6F1.22DA12|e=18,fc=1:TOYOTA_ATF_TEMP_V2
@@ -248,7 +248,7 @@ unsupported_commands_by_ecu:
   - 7E0.014E:CLR_TIME
   - 7E0.7E8.2121:TOYOTA_CC_CANCEL_SWITCH_ON,TOYOTA_CC_CCS_INDICATOR_M_CPU_ON,TOYOTA_CC_CCS_READY_M_CPU_ON,TOYOTA_CC_CC_ON,TOYOTA_CC_DRIVING_FORCE,TOYOTA_CC_LIVE_SET_COAST_SWITCH_ON,TOYOTA_CC_MAIN_SW_M_CPU_ON,TOYOTA_CC_ON,TOYOTA_CC_RES_ACC_SWITCH_ON,TOYOTA_CC_S,TOYOTA_CC_STOP_LIGHT_SWITCH_1_ON,TOYOTA_CC_STOP_LIGHT_SWITCH_2_ON,TOYOTA_CC_VSS
   - 7E0.7E8.2128:TOYOTA_ODO
-  - 7E0.7E8.2151:TOYOTA_AC_AMB_T,TOYOTA_AC_FB,TOYOTA_ELEC_LOAD_FB,TOYOTA_ENG_SPD_START_OFF,TOYOTA_ENG_START_HESIT,TOYOTA_ENG_START_T,TOYOTA_EOT,TOYOTA_EOT_V2,TOYOTA_IMMOB_FUEL_CUT,TOYOTA_ISC_FB,TOYOTA_ISC_FLOW,TOYOTA_ISC_LEARN,TOYOTA_ISC_POS,TOYOTA_LOW_RPM_CTRL,TOYOTA_LOW_RPM_START,TOYOTA_NEUTRAL_CTRL,TOYOTA_N_RANGE_STS,TOYOTA_PREV_TRIP_AMB_T,TOYOTA_PREV_TRIP_DST,TOYOTA_PREV_TRIP_EOT,TOYOTA_PREV_TRIP_IAT,TOYOTA_STARTER_CNT,TOYOTA_TPS,TOYOTA_VVTOT,TOYOTA_VVT_ADV_FAIL
+  - 7E0.7E8.2151:TOYOTA_AC_AMB_T,TOYOTA_AC_FB,TOYOTA_ELEC_LOAD_FB,TOYOTA_ENG_SPD_START_OFF,TOYOTA_ENG_START_HESIT,TOYOTA_ENG_START_T,TOYOTA_EOT,TOYOTA_EOT_V3,TOYOTA_IMMOB_FUEL_CUT,TOYOTA_ISC_FB,TOYOTA_ISC_FLOW,TOYOTA_ISC_LEARN,TOYOTA_ISC_POS,TOYOTA_LOW_RPM_CTRL,TOYOTA_LOW_RPM_START,TOYOTA_NEUTRAL_CTRL,TOYOTA_N_RANGE_STS,TOYOTA_PREV_TRIP_AMB_T,TOYOTA_PREV_TRIP_DST,TOYOTA_PREV_TRIP_EOT,TOYOTA_PREV_TRIP_IAT,TOYOTA_STARTER_CNT,TOYOTA_TPS,TOYOTA_VVTOT,TOYOTA_VVT_ADV_FAIL
   - 7E0.7E8.2182:TOYOTA_ATF_PAN_T,TOYOTA_ATF_TQC_T
   - 7E0.7E8.2185:TOYOTA_GEAR,TOYOTA_GEAR_V2,TOYOTA_TQC_LOCKUP
   "7E1":
