--- a/tests/test_cases/2022/commands/7C0.7C8.221021.yaml
+++ b/tests/test_cases/2022/commands/7C0.7C8.221021.yaml
@@ -1,20 +1,20 @@
 command_id: 7C0.7C8.221021
 test_cases:
 - expected_values:
-    TOYOTA_BATTERY_VOLTAGE: 0
+    TOYOTA_BATTERY_VOLTAGE_V2: 0
   response: 7C80462102100
 - expected_values:
-    TOYOTA_BATTERY_VOLTAGE: 13.8
+    TOYOTA_BATTERY_VOLTAGE_V2: 13.8
   response: 7C8046210218A
 - expected_values:
-    TOYOTA_BATTERY_VOLTAGE: 13.9
+    TOYOTA_BATTERY_VOLTAGE_V2: 13.9
   response: 7C8046210218B
 - expected_values:
-    TOYOTA_BATTERY_VOLTAGE: 14
+    TOYOTA_BATTERY_VOLTAGE_V2: 14
   response: 7C8046210218C
 - expected_values:
-    TOYOTA_BATTERY_VOLTAGE: 14.1
+    TOYOTA_BATTERY_VOLTAGE_V2: 14.1
   response: 7C8046210218D
 - expected_values:
-    TOYOTA_BATTERY_VOLTAGE: 14.2
+    TOYOTA_BATTERY_VOLTAGE_V2: 14.2
   response: 7C8046210218E
