--- a/tests/test_cases/2024/commands/700.708.2210A2.yaml
+++ b/tests/test_cases/2024/commands/700.708.2210A2.yaml
@@ -16,6 +16,62 @@ test_cases:
     70821A9960000000000
 - expected_values:
     TOYOTA_AFRL_HIGH_1: 8.58824
+    TOYOTA_AFRL_IDLE_1: 1.94824
+    TOYOTA_AFRL_LOW_1: 1.94824
+    TOYOTA_AFRL_MID_1_1: 18.35294
+    TOYOTA_AFRL_MID_2_1: 17.18118
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 8.82353
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 2.15686
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.15686
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 18.62745
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 17.45098
+  response: |-
+    70810086210A28585AF
+    70821AC960000000000
+- expected_values:
+    TOYOTA_AFRL_HIGH_1: 8.58824
+    TOYOTA_AFRL_IDLE_1: 2.72941
+    TOYOTA_AFRL_LOW_1: 2.72941
+    TOYOTA_AFRL_MID_1_1: 18.35294
+    TOYOTA_AFRL_MID_2_1: 17.18118
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 8.82353
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 2.94118
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.94118
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 18.62745
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 17.45098
+  response: |-
+    70810086210A28787AF
+    70821AC960000000000
+- expected_values:
+    TOYOTA_AFRL_HIGH_1: 8.58824
+    TOYOTA_AFRL_IDLE_1: 5.46353
+    TOYOTA_AFRL_LOW_1: 5.46353
+    TOYOTA_AFRL_MID_1_1: 18.35294
+    TOYOTA_AFRL_MID_2_1: 17.18118
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 8.82353
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 5.68627
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 5.68627
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 18.62745
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 17.45098
+  response: |-
+    70810086210A28E8EAF
+    70821AC960000000000
+- expected_values:
+    TOYOTA_AFRL_HIGH_1: 8.58824
+    TOYOTA_AFRL_IDLE_1: 5.46353
+    TOYOTA_AFRL_LOW_1: 5.46353
+    TOYOTA_AFRL_MID_1_1: 19.13412
+    TOYOTA_AFRL_MID_2_1: 17.18118
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 8.82353
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 5.68627
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 5.68627
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 19.41176
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 17.45098
+  response: |-
+    70810086210A28E8EB1
+    70821AC960000000000
+- expected_values:
+    TOYOTA_AFRL_HIGH_1: 8.58824
     TOYOTA_AFRL_IDLE_1: 7.41647
     TOYOTA_AFRL_LOW_1: 7.41647
     TOYOTA_AFRL_MID_1_1: 17.96235
