--- a/tests/test_cases/2024/commands/700.708.221F6D.yaml
+++ b/tests/test_cases/2024/commands/700.708.221F6D.yaml
@@ -1,12 +1,20 @@
 command_id: 700.708.221F6D
 test_cases:
 - expected_values:
-    TOYOTA_HFP_ACTUAL: 6.95
+    TOYOTA_HFP_ACTUAL: 6.02
     TOYOTA_HFP_TARGET: 4000
-    TOYOTA_LOW_FUEL_PRESSURE: 410
+    TOYOTA_LOW_FUEL_PRESSURE: 440
   response: |-
     708100E621F6D1B0190
-    7082102B70000280029
+    70821025A000028002C
+    7082200000000000000
+- expected_values:
+    TOYOTA_HFP_ACTUAL: 4.74
+    TOYOTA_HFP_TARGET: 6000
+    TOYOTA_LOW_FUEL_PRESSURE: 370
+  response: |-
+    708100E621F6D1B0258
+    7082101DA0000280025
     7082200000000000000
 - expected_values:
     TOYOTA_HFP_ACTUAL: 5.92
@@ -33,12 +41,12 @@ test_cases:
     708210509000000003D
     7082200000000000000
 - expected_values:
-    TOYOTA_HFP_ACTUAL: 7.42
-    TOYOTA_HFP_TARGET: 7360
-    TOYOTA_LOW_FUEL_PRESSURE: 380
+    TOYOTA_HFP_ACTUAL: 11.98
+    TOYOTA_HFP_TARGET: 10000
+    TOYOTA_LOW_FUEL_PRESSURE: 520
   response: |-
-    708100E621F6D1B02E0
-    7082102E60000280026
+    708100E621F6D1B03E8
+    7082104AE0000280034
     7082200000000000000
 - expected_values:
     TOYOTA_HFP_ACTUAL: 10.85
@@ -47,6 +55,14 @@ test_cases:
   response: |-
     708100E621F6D1B0439
     70821043D0000280027
+    7082200000000000000
+- expected_values:
+    TOYOTA_HFP_ACTUAL: 10.1
+    TOYOTA_HFP_TARGET: 12690
+    TOYOTA_LOW_FUEL_PRESSURE: 420
+  response: |-
+    708100E621F6D1B04F5
+    7082103F200002F002A
     7082200000000000000
 - expected_values:
     TOYOTA_HFP_ACTUAL: 14.74
