--- a/tests/test_cases/2024/commands/7C0.7C8.221021.yaml
+++ b/tests/test_cases/2024/commands/7C0.7C8.221021.yaml
@@ -1,11 +1,11 @@
 command_id: 7C0.7C8.221021
 test_cases:
 - expected_values:
-    TOYOTA_BATTERY_VOLTAGE: 13.2
+    TOYOTA_BATTERY_VOLTAGE_V2: 13.2
   response: '7C8 04 62 10 21 84 '
 - expected_values:
-    TOYOTA_BATTERY_VOLTAGE: 0
+    TOYOTA_BATTERY_VOLTAGE_V2: 0
   response: 7C80462102100
 - expected_values:
-    TOYOTA_BATTERY_VOLTAGE: 15.4
+    TOYOTA_BATTERY_VOLTAGE_V2: 15.4
   response: 7C8046210219A
