--- a/tests/test_cases/2024/commands/7D2.7DA.2215F7.yaml
+++ b/tests/test_cases/2024/commands/7D2.7DA.2215F7.yaml
@@ -4,11 +4,11 @@ test_cases:
     TOYOTA_12V_C: -0.67893
   response: 7DA056215F77F4E
 - expected_values:
+    TOYOTA_12V_C: 8.959999999547108e-05
+  response: 7DA056215F78000
+- expected_values:
     TOYOTA_12V_C: 0.97284
   response: 7DA056215F780FF
-- expected_values:
-    TOYOTA_12V_C: 0.97665
-  response: 7DA056215F78100
 - expected_values:
     TOYOTA_12V_C: 31.54766
   response: 7DA056215F7A04E
