--- a/tests/test_cases/2025/commands/7C0.7C8.221021.yaml
+++ b/tests/test_cases/2025/commands/7C0.7C8.221021.yaml
@@ -1,8 +1,8 @@
 command_id: 7C0.7C8.221021
 test_cases:
 - expected_values:
-    TOYOTA_BATTERY_VOLTAGE: 0
+    TOYOTA_BATTERY_VOLTAGE_V2: 0
   response: 7C80462102100
 - expected_values:
-    TOYOTA_BATTERY_VOLTAGE: 15.3
+    TOYOTA_BATTERY_VOLTAGE_V2: 15.3
   response: 7C80462102199
