--- a/tests/test_cases/2024/commands/700.708.22106A.yaml
+++ b/tests/test_cases/2024/commands/700.708.22106A.yaml
@@ -5,6 +5,10 @@ test_cases:
     TOYOTA_FUEL_PUMP_DUTY_RATIO: 30
   response: 7080562106A01EC
 - expected_values:
+    TOYOTA_FP_DUTY_RATIO: 264.81707
+    TOYOTA_FUEL_PUMP_DUTY_RATIO: 264.81707
+  response: 7080562106A10F7
+- expected_values:
     TOYOTA_FP_DUTY_RATIO: 281.15854
     TOYOTA_FUEL_PUMP_DUTY_RATIO: 281.15854
   response: 7080562106A1203
