--- a/tests/test_cases/2024/commands/700.708.221627.yaml
+++ b/tests/test_cases/2024/commands/700.708.221627.yaml
@@ -1,6 +1,9 @@
 command_id: 700.708.221627
 test_cases:
 - expected_values:
+    TOYOTA_ATF_T_PAN_V3: 32.5
+  response: '708056216274880'
+- expected_values:
     TOYOTA_ATF_T_PAN_V3: 40
   response: '708056216275000'
 - expected_values:
