--- a/tests/test_cases/2024/commands/700.708.221088.yaml
+++ b/tests/test_cases/2024/commands/700.708.221088.yaml
@@ -4,8 +4,8 @@ test_cases:
     TOYOTA_EXHAUST_VVT_ANGLE_B1: 0
   response: '708056210880000'
 - expected_values:
-    TOYOTA_EXHAUST_VVT_ANGLE_B1: 37.28966
-  response: 708056210880EEB
+    TOYOTA_EXHAUST_VVT_ANGLE_B1: 32.37825
+  response: 708056210880CF4
 - expected_values:
-    TOYOTA_EXHAUST_VVT_ANGLE_B1: 37.63141
-  response: 708056210880F0E
+    TOYOTA_EXHAUST_VVT_ANGLE_B1: 40.18965
+  response: '708056210881014'
